[package]
name = "rest-api"
version = "0.1.0"
authors = ["Benjamin Boortz <benjamin.boortz@secure.mailbox.org>"]

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.3.12"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
#path = "../Rocket/contrib/lib"
